2010-05-10  Miguel de Icaza  <miguel@novell.com>

	* gfile-win32.c: Port this to use the Win32 APIs to get this
	building with Cygwin.

2010-05-07  Andrew Jorgensen  <ajorgensen@novell.com>

	* test/test.h: Fix some compiler warning that SUSE takes seriously.

2010-05-06  Alan McGovern  <amcgovern@novell.com>

	* src/gmarkup.c: Fix a parser issue when skipping the xml declaration.

2010-05-06  Jonathan Chambers  <joncham@gmail.com>

	* gfile-win32.c: Use __stat64 instead of _stat64.

2010-05-04  Jonathan Chambers  <joncham@gmail.com>

	* gspawn.c: Remove extern define for MSVC.

2010-05-03  Zoltan Varga  <vargaz@gmail.com>

	* src/glib.h: Include unistd.h on !windows for pid_t.

	* gspawn.c: Add an extern define for environ on !apple platforms.

2010-05-02  Zoltan Varga  <vargaz@gmail.com>

	* src/glib.h: Include sys/types.h for pid_t.

2010-05-01  Zoltan Varga  <vargaz@gmail.com>

	* src/goutput.c (g_logv): Append a '\n' to the end of the string as glib does.

2010-04-28  Zoltan Varga  <vargaz@gmail.com>

	* configure.ac src/gspawn.c: Applied openbsd changes from Robert Nagy
	<robert@openbsd.org>.

2010-04-16  Miguel de Icaza  <miguel@novell.com>

	* src/gshell.c (g_shell_unquote): Implement this.

2010-04-25  Andreas Faerber  <andreas.faerber@web.de>

	* configure.ac: The iconv function may be libiconv_open.
	Fixes linking with GNU libiconv.

	Contributed under MIT/X11 license.

2010-04-23  Geoff Norton  <gnorton@novell.com>

	* configure.ac: The iconv function is iconv_open.

2010-04-19  Jonathan Pryor  <jpryor@novell.com>

	* src/glib.h: Rebase g_return_if_fail(), g_return_val_if_fail() in
	  terms of g_critical() instead of printf, and turn g_printerr() into
	  an actual function instead of a macro.
	* src/goutput.c: Add Android support, sending g_print(), g_printerr(),
	  and g_log() messages to the Android system log.

2010-04-16 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* test/ptrarray.c: new tests