@@ -1,7 +1,11 @@
+if HOST_WIN32
+SUBDIRS = src
+else
 if CROSS_COMPILING
 SUBDIRS = src
 else
 SUBDIRS = src test
+endif
 endif
 
 EXTRA_DIST = autogen.sh README NEWS AUTHORS ChangeLog
